--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+.row1 {
+    display: block;
+    width: 100%;
+    background-color: #F6D8CE;
+    margin-top: 20px;
+  }
+  .row2{
+    display: block;
+    width: 100%;
+    background-color: #F2F5A9;
+    margin-top: 20px;
+  }
+
+  .container {
+    display: inline-block;
+   margin-top: 15px;
+   
+   width: 100%;
+  
+  }
+  .container p{
+      font-size: 16px;
+    text-align: center;
+  }
+  .container h1{
+  text-align: center;
+  font-size: 30px;
+  }
+
+  .img-center {
+    margin:0 auto;
+    width: 400px;
+    height: 350px;
+    border-radius: 10px;
+  }
