--- a/src/styles.css
+++ b/src/styles.css
@@ -10,26 +10,94 @@
     background-color: #F2F5A9;
     margin-top: 20px;
   }
-
-  .container {
+ 
+  .row_container {
     display: inline-block;
    margin-top: 15px;
    
    width: 100%;
   
   }
-  .container p{
+  .row_container p{
       font-size: 16px;
     text-align: center;
   }
-  .container h1{
+  .row_container h1{
   text-align: center;
   font-size: 30px;
-  }
+  } 
 
   .img-center {
     margin:0 auto;
     width: 400px;
     height: 350px;
     border-radius: 10px;
+  } 
+
+  @media (min-width: 768px) {
+    .navbar-nav {
+      width: 100%;
+      text-align: center;
+    }
+    .navbar-nav > li {
+      float: none;
+      display: inline-block;
+    }
+    .navbar-nav > li.navbar-right {
+      float: right !important;
+    }
+  } 
+
+  .footer {
+   
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: blue;
+    color: white;
+    text-align: center;
+ }
+
+ .left {
+  float: left;
+  border-radius: 20px;
+}
+.right {
+  float: right;
+  border-radius: 20px;
+}
+
+  body{
+    width: 100;
+    margin: 0;
+  }
+  
+  img {
+      width: 60%;
+  
+  }
+  .coluna1{
+    background-color: #E2A9F3;
+  }
+  .services-section img {
+      width: 200px;
+      height: 200px;
+      margin: auto;    
+      display: block;
+  }
+  
+  .middle {
+  text-align: center;
+  }
+  .services{
+    margin-top: 20px;
+    background-color: #FBF5EF;
+  }
+  h3{
+   text-align: center;
+  }
+  .titulo{
+    font-size: 50px;
+    text-align: center;
+    margin-top: 15px;
   }
