--- a/src/styles.css
+++ b/src/styles.css
@@ -1,64 +1,95 @@
-.row1 {
-    display: block;
+@media (min-width: 768px) {
+  .navbar-nav {
     width: 100%;
-    background-color: #F6D8CE;
-    margin-top: 20px;
+    text-align: center;
   }
-  .row2{
-    display: block;
-    width: 100%;
-    background-color: #F2F5A9;
-    margin-top: 20px;
-  }
- 
-  .row_container {
+  .navbar-nav > li {
+    float: none;
     display: inline-block;
-   margin-top: 15px;
-   
-   width: 100%;
-  
   }
-  .row_container p{
-      font-size: 16px;
-    text-align: center;
+  .navbar-nav > li.navbar-right {
+    float: right !important;
   }
-  .row_container h1{
+} 
+body{
+  width: 100;
+  margin: 0;
+}
+
+img {
+    width: 60%;
+
+}
+.coluna1{
+  background-color: #E2A9F3;
+}
+.services-section img {
+    width: 200px;
+    height: 200px;
+    margin: auto;    
+    display: block;
+}
+
+.middle {
+text-align: center;
+}
+.services{
+  margin-top: 20px;
+  background-color: #585858;
+  color: aliceblue;
+}
+h3{
+ text-align: center;
+ 
+}
+
+.titulo{
+  font-size: 50px;
   text-align: center;
-  font-size: 30px;
-  } 
+  margin-top: 15px;
+}
+.row1 {
+  display: block;
+  width: 100%;
+  background-color: #2E2E2E;
+  margin-top: 20px;
+}
+.row2{
+  display: block;
+  width: 100%;
+  background-color: #151515;
+  margin-top: 20px;
+}
+.row3 {
+  display: block;
+  width: 100%;
+  background-color: #F6D8CE;
+  margin-top: 20px;
+}
+.row4{
+  display: block;
+  width: 100%;
+  background-color: #F2F5A9;
+  margin-top: 20px;
+}
 
-  .img-center {
-    margin:0 auto;
-    width: 400px;
-    height: 350px;
-    border-radius: 10px;
-  } 
 
-  @media (min-width: 768px) {
-    .navbar-nav {
-      width: 100%;
-      text-align: center;
-    }
-    .navbar-nav > li {
-      float: none;
-      display: inline-block;
-    }
-    .navbar-nav > li.navbar-right {
-      float: right !important;
-    }
-  } 
-
-  .footer {
-   
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: blue;
-    color: white;
-    text-align: center;
- }
-
- .left {
+.row_container {
+  display: inline-block;
+ margin-top: 15px;
+ 
+ width: 100%;
+ color: aliceblue;
+}
+.row_container p{
+    font-size: 16px;
+  text-align: center;
+}
+.row_container h1{
+text-align: center;
+font-size: 30px;
+}
+.left {
   float: left;
   border-radius: 20px;
 }
@@ -66,38 +97,24 @@
   float: right;
   border-radius: 20px;
 }
-
-  body{
-    width: 100;
-    margin: 0;
-  }
-  
-  img {
-      width: 60%;
-  
-  }
-  .coluna1{
-    background-color: #E2A9F3;
-  }
-  .services-section img {
-      width: 200px;
-      height: 200px;
-      margin: auto;    
-      display: block;
-  }
-  
-  .middle {
-  text-align: center;
-  }
-  .services{
-    margin-top: 20px;
-    background-color: #FBF5EF;
-  }
-  h3{
+.img-center {
+  margin:0 auto;
+  width: 400px;
+  height: 350px;
+  border-radius: 10px;
+}
+.footer {
+   
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: #151515;
+   color: white;
    text-align: center;
-  }
-  .titulo{
-    font-size: 50px;
-    text-align: center;
-    margin-top: 15px;
-  }
+   margin-top: 15px;
+}
+.services-paragraph p {
+  font-size: 16px;
+}
+.footer p{
+  font-size: 30px;}
